just use the jar to copy into the image, no path

--- a/rest-service/Dockerfile
+++ b/rest-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8
-COPY rest-service/complete/build/libs/gs-rest-service-0.1.0.jar /app.jar
+COPY gs-rest-service.jar /app.jar
 EXPOSE 8080/tcp
 ENTRYPOINT ["java", "-jar", "/app.jar"]
